<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Xinyue</string>

    <string name="action_settings">Settings</string>
    <string name="no_products">Sorry. No products in this category.</string>
    <string name="title_activity_post_detail">PostDetailActivity</string>
    <string name="openDrawer">OpenDrawer</string>
    <string name="closeDrawer">CloseDrawer</string>

    <!-- Strings for Post Detail Activity -->
    <string name="post_detail_title">Detail</string>
    <string name="post_share">Share</string>
    <string name="share_indication">Here is a beautiful jewelry from Xinyue. Please check it out at&#160;</string>

    <!-- Strings for DrawerLayout -->
    <string name="drawerlayout_menu_home">Home</string>
    <string name="drawerlayout_menu_about">About</string>
    <string name="drawerlayout_menu_taobao">Online Shop</string>
    <string name="drawerlayout_menu_settings">Settings</string>

    <!-- Strings for menu -->
    <string name="menu_refresh">Refresh</string>

    <!-- String array for categories -->
    <string-array name="categories">
        <item>All</item>
        <item>Earrings</item>
        <item>Pendants</item>
        <item>Necklaces</item>
        <item>Rings</item>
        <item>Bracelets</item>
        <item>Brooches</item>
    </string-array>
    <string name="category_others">Others</string>
    <string name="category">Category</string>

    <!-- Strings for listview connecting indication -->
    <string name="footer_fail_indication">Connect failed. Click to retry!</string>
    <string name="footer_no_more_indication">No more to load!</string>
    <string name="footer_has_more_indication">More...</string>
    <string name="data_connect_is_off">Data is not connected!</string>
    <string name="data_connect_is_failed">Internet connection error.</string>

    <!-- Strings for SettingsFragment -->
    <string name="settings_language">Language Setting</string>
    <string name="language_setting">Language</string>
    <string-array name="pref_language_list">
        <item>English</item>
        <item>简体中文</item>
    </string-array>
    <string-array name="pref_language_values">
        <item>en</item>
        <item>zh</item>
    </string-array>
    <string name="pref_language_default_value">en</string>

    <string name="settings_cache">Cache</string>
    <string name="cache_setting">Clear Cache</string>

    <!-- Strings for AboutFragment -->
    <string name="about_since">Since</string>
    <string name="about_since_date">2012.10</string>
    <string name="about_origin">Origin</string>
    <string name="about_credits">Credits</string>
    <string name="about_mail">E-mail</string>
    <string name="about_weibo">Weibo</string>
    <string name="send_mail_indication">Send mail...</string>
    <string name="view_weibo_indication">View Weibo...</string>
    <string name="about_designer">Designer</string>
    <string name="about_designer_name">Pan Zehui</string>

    <string name="origin_content">古人爱石历有传统。\n\n石之美者为玉。\n\n玉乃天然生命体，于是便有万千姿色。\n\n昔米公以瘦，漏，透，皱评石兄，今我于万千中寻所爱，便效以恬，逸，和为则。\n\n恬者，质地细腻，色净光柔；仿佛佳人，在水一方，婉约缈缈，雾幔习习。\n\n逸者，色泽鲜丽，质透光澈；灼若芙蕖出碧水，素似青云穿淡月，不沾一尘。\n\n和者，必是种老色浓光幽；蕴老辣，化平淡，然来去间皆有甘味。\n\n三者之美各有其境，而成境在心。\n\n我寻其美者，愿此美融于生活，便尝试它以初始之性待人，望君能感之；感之并喜悦，更妙。\n\n故，新月初也。</string>

    <string name="author">Author: pzheng</string>
    <string name="website">http://www.xinyue.in</string>
    <string name="right_reserved">\u00A9 2014-2015 xinyue.in. All rights reserved.</string>
    <string name="title_activity_display_credits">Credits</string>
    <string name="title_activity_display_license">License</string>
    <string name="floatingactionbutton_credit">The MIT License (MIT)\n\nCopyright (c) 2014 Oleksandr Melnykov\n\nPermission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:\n\nThe above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.\n\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>
    <string name="drawertemplate_credit">Copyright (c) 2014 Pedro Oliveira\n\nLicensed under the Apache License, Version 2.0</string>
    <string name="app_license">The MIT License (MIT)\n\nCopyright (c) 2012-2015 pzheng.me\n\nPermission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:\n\nThe above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.\n\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_display_origin">DisplayOriginActivity</string>


</resources>
