<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/content_fragment"
            android:checked="true"
            android:icon="@drawable/ic_grade_black_18dp"
            android:title="@string/drawerlayout_menu_home"/>
        <item
            android:id="@+id/taobao_fragment"
            android:icon="@drawable/ic_store_black_18dp"
            android:title="@string/drawerlayout_menu_taobao"/>
        <item
            android:id="@+id/settings_fragment"
            android:icon="@drawable/ic_settings_black_18dp"
            android:title="@string/drawerlayout_menu_settings"/>
        <item
            android:id="@+id/about_fragment"
            android:icon="@drawable/ic_info_outline_black_18dp"
            android:title="@string/drawerlayout_menu_about" />
    </group>

</menu>