<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="in.xinyue.xinyue.ui.fragment.AboutFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="icon image"
        android:id="@+id/logo_icon"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/circle_icon"
        android:paddingTop="20sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_centerInParent="true"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:background="@android:color/white">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:paddingLeft="4sp"
                android:paddingTop="7sp"
                android:paddingBottom="7sp"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:text="@string/about_designer"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:paddingRight="4sp"
                android:paddingTop="7sp"
                android:paddingBottom="7sp"
                android:text="@string/about_designer_name"
                android:textSize="17sp"
                android:textColor="@color/primary_text_disabled_material_light"/>

        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/background_material_light"/>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:paddingLeft="4sp"
                android:paddingTop="7sp"
                android:paddingBottom="7sp"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:text="@string/about_since"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:paddingRight="4sp"
                android:paddingTop="7sp"
                android:paddingBottom="7sp"
                android:text="@string/about_since_date"
                android:textStyle="italic"
                android:textSize="17sp"
                android:textColor="@color/primary_text_disabled_material_light"/>

        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/background_material_light"/>

        <TextView
            android:id="@+id/origin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:paddingLeft="4sp"
            android:paddingTop="7sp"
            android:paddingBottom="7sp"
            android:textSize="17sp"
            android:textColor="@android:color/black"
            android:text="@string/about_origin"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/background_material_light"/>

        <TextView
            android:id="@+id/mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:paddingLeft="4sp"
            android:paddingTop="7sp"
            android:paddingBottom="7sp"
            android:textSize="17sp"
            android:textColor="@android:color/black"
            android:text="@string/about_mail"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/background_material_light"/>

        <TextView
            android:id="@+id/weibo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:paddingLeft="4sp"
            android:paddingTop="7sp"
            android:paddingBottom="7sp"
            android:textSize="17sp"
            android:textColor="@android:color/black"
            android:text="@string/about_weibo"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/background_material_light"/>

        <TextView
            android:id="@+id/credits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:paddingLeft="4sp"
            android:paddingTop="7sp"
            android:paddingBottom="7sp"
            android:textSize="17sp"
            android:textColor="@android:color/black"
            android:text="@string/about_credits"/>

    </LinearLayout>

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/copy_right"
        android:layout_gravity="center_horizontal"
        android:text="@string/right_reserved"
        android:paddingBottom="10sp"
        android:textColor="@color/primary_text_disabled_material_light"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>
